# OpenGL

./: .gitignore  CMakeLists.txt  SurajSharma.sln  SurajSharma.vcxproj  compile_commands.json  fragment_core.glsl  libs.h  main.cpp  vertex_core.glsl
.cache/clangd/index/: gl.c.84F6126D0040050E.idx  gl.h.750E7924E9E2F997.idx  glfw3.h.FD0D7D6B557282A4.idx  khrplatform.h.686AC22815A88A56.idx  main.cpp.6B20116D5195A5F9.idx
Linking/lib/: soil2-debug.lib  soil2.lib
SurajSharma/Debug/: SurajSharma.exe.recipe  SurajSharma.ilk  vc143.idb
SurajSharma/Debug/SurajSharma.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  SurajSharma.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
SurajSharma/x64/Debug/: SurajSharma.exe.recipe  vc143.idb
SurajSharma/x64/Debug/SurajSharma.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  SurajSharma.lastbuildstate  link.secondary.1.tlog
core/: Application.cpp  Application.h  EBO.cpp  EBO.h  Shader.h  Texture.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
glad/include/glad/: gl.h
shaders/: fragment.glsl  fragmentShader.glsl  vertex.glsl
src/: main.cpp  shader.h
